rerun start - after the error bugfix

--- a/joint_challenge/run.ipynb
+++ b/joint_challenge/run.ipynb
@@ -1270,224 +1270,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2024-10-31 15:19:01,215 :: INFO :: >>>> (re)starting COSMOS_7DS_IMS_SPHEREx_deep (Testing PIT/CRPS calculation in oversampled p(z))\n",
-      "2024-10-31 15:19:01,230 :: INFO :: Running fit_and_save_result_prior with 1 processes\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2024-10-31 15:19:01,355 :: INFO :: Fitting 1000 objects in 1 batches ==\n",
-      "2024-10-31 15:19:01,356 :: INFO :: Fitting 0th batch =====================\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Read default param file: /data1/hbahk/envs/main/lib/python3.9/site-packages/eazy/data/zphot.param.default\n",
-      "Read CATALOG_FILE: data/input/COSMOS_input_7DS_IMS_SPHEREx_deep.fits\n",
-      "   >>> NOBJ = 1000\n",
-      "F419 E419 (419): SPHEREx_Band1_1\n",
-      "F420 E420 (420): SPHEREx_Band1_2\n",
-      "F421 E421 (421): SPHEREx_Band1_3\n",
-      "F422 E422 (422): SPHEREx_Band1_4\n",
-      "F423 E423 (423): SPHEREx_Band1_5\n",
-      "F424 E424 (424): SPHEREx_Band1_6\n",
-      "F425 E425 (425): SPHEREx_Band1_7\n",
-      "F426 E426 (426): SPHEREx_Band1_8\n",
-      "F427 E427 (427): SPHEREx_Band1_9\n",
-      "F428 E428 (428): SPHEREx_Band1_10\n",
-      "F429 E429 (429): SPHEREx_Band1_11\n",
-      "F430 E430 (430): SPHEREx_Band1_12\n",
-      "F431 E431 (431): SPHEREx_Band1_13\n",
-      "F432 E432 (432): SPHEREx_Band1_14\n",
-      "F433 E433 (433): SPHEREx_Band1_15\n",
-      "F434 E434 (434): SPHEREx_Band1_16\n",
-      "F435 E435 (435): SPHEREx_Band1_17\n",
-      "F436 E436 (436): SPHEREx_Band2_1\n",
-      "F437 E437 (437): SPHEREx_Band2_2\n",
-      "F438 E438 (438): SPHEREx_Band2_3\n",
-      "F439 E439 (439): SPHEREx_Band2_4\n",
-      "F440 E440 (440): SPHEREx_Band2_5\n",
-      "F441 E441 (441): SPHEREx_Band2_6\n",
-      "F442 E442 (442): SPHEREx_Band2_7\n",
-      "F443 E443 (443): SPHEREx_Band2_8\n",
-      "F444 E444 (444): SPHEREx_Band2_9\n",
-      "F445 E445 (445): SPHEREx_Band2_10\n",
-      "F446 E446 (446): SPHEREx_Band2_11\n",
-      "F447 E447 (447): SPHEREx_Band2_12\n",
-      "F448 E448 (448): SPHEREx_Band2_13\n",
-      "F449 E449 (449): SPHEREx_Band2_14\n",
-      "F450 E450 (450): SPHEREx_Band2_15\n",
-      "F451 E451 (451): SPHEREx_Band2_16\n",
-      "F452 E452 (452): SPHEREx_Band2_17\n",
-      "F453 E453 (453): SPHEREx_Band3_1\n",
-      "F454 E454 (454): SPHEREx_Band3_2\n",
-      "F455 E455 (455): SPHEREx_Band3_3\n",
-      "F456 E456 (456): SPHEREx_Band3_4\n",
-      "F457 E457 (457): SPHEREx_Band3_5\n",
-      "F458 E458 (458): SPHEREx_Band3_6\n",
-      "F459 E459 (459): SPHEREx_Band3_7\n",
-      "F460 E460 (460): SPHEREx_Band3_8\n",
-      "F461 E461 (461): SPHEREx_Band3_9\n",
-      "F462 E462 (462): SPHEREx_Band3_10\n",
-      "F463 E463 (463): SPHEREx_Band3_11\n",
-      "F464 E464 (464): SPHEREx_Band3_12\n",
-      "F465 E465 (465): SPHEREx_Band3_13\n",
-      "F466 E466 (466): SPHEREx_Band3_14\n",
-      "F467 E467 (467): SPHEREx_Band3_15\n",
-      "F468 E468 (468): SPHEREx_Band3_16\n",
-      "F469 E469 (469): SPHEREx_Band3_17\n",
-      "F470 E470 (470): SPHEREx_Band4_1\n",
-      "F471 E471 (471): SPHEREx_Band4_2\n",
-      "F472 E472 (472): SPHEREx_Band4_3\n",
-      "F473 E473 (473): SPHEREx_Band4_4\n",
-      "F474 E474 (474): SPHEREx_Band4_5\n",
-      "F475 E475 (475): SPHEREx_Band4_6\n",
-      "F476 E476 (476): SPHEREx_Band4_7\n",
-      "F477 E477 (477): SPHEREx_Band4_8\n",
-      "F478 E478 (478): SPHEREx_Band4_9\n",
-      "F479 E479 (479): SPHEREx_Band4_10\n",
-      "F480 E480 (480): SPHEREx_Band4_11\n",
-      "F481 E481 (481): SPHEREx_Band4_12\n",
-      "F482 E482 (482): SPHEREx_Band4_13\n",
-      "F483 E483 (483): SPHEREx_Band4_14\n",
-      "F484 E484 (484): SPHEREx_Band4_15\n",
-      "F485 E485 (485): SPHEREx_Band4_16\n",
-      "F486 E486 (486): SPHEREx_Band4_17\n",
-      "F487 E487 (487): SPHEREx_Band5_1\n",
-      "F488 E488 (488): SPHEREx_Band5_2\n",
-      "F489 E489 (489): SPHEREx_Band5_3\n",
-      "F490 E490 (490): SPHEREx_Band5_4\n",
-      "F491 E491 (491): SPHEREx_Band5_5\n",
-      "F492 E492 (492): SPHEREx_Band5_6\n",
-      "F493 E493 (493): SPHEREx_Band5_7\n",
-      "F494 E494 (494): SPHEREx_Band5_8\n",
-      "F495 E495 (495): SPHEREx_Band5_9\n",
-      "F496 E496 (496): SPHEREx_Band5_10\n",
-      "F497 E497 (497): SPHEREx_Band5_11\n",
-      "F498 E498 (498): SPHEREx_Band5_12\n",
-      "F499 E499 (499): SPHEREx_Band5_13\n",
-      "F500 E500 (500): SPHEREx_Band5_14\n",
-      "F501 E501 (501): SPHEREx_Band5_15\n",
-      "F502 E502 (502): SPHEREx_Band5_16\n",
-      "F503 E503 (503): SPHEREx_Band5_17\n",
-      "F504 E504 (504): SPHEREx_Band6_1\n",
-      "F505 E505 (505): SPHEREx_Band6_2\n",
-      "F506 E506 (506): SPHEREx_Band6_3\n",
-      "F507 E507 (507): SPHEREx_Band6_4\n",
-      "F508 E508 (508): SPHEREx_Band6_5\n",
-      "F509 E509 (509): SPHEREx_Band6_6\n",
-      "F510 E510 (510): SPHEREx_Band6_7\n",
-      "F511 E511 (511): SPHEREx_Band6_8\n",
-      "F512 E512 (512): SPHEREx_Band6_9\n",
-      "F513 E513 (513): SPHEREx_Band6_10\n",
-      "F514 E514 (514): SPHEREx_Band6_11\n",
-      "F515 E515 (515): SPHEREx_Band6_12\n",
-      "F516 E516 (516): SPHEREx_Band6_13\n",
-      "F517 E517 (517): SPHEREx_Band6_14\n",
-      "F518 E518 (518): SPHEREx_Band6_15\n",
-      "F519 E519 (519): SPHEREx_Band6_16\n",
-      "F520 E520 (520): SPHEREx_Band6_17\n",
-      "F521 E521 (521): 7DT_4000_fitted\n",
-      "F522 E522 (522): 7DT_4250_fitted\n",
-      "F523 E523 (523): 7DT_4500_fitted\n",
-      "F524 E524 (524): 7DT_4750_fitted\n",
-      "F525 E525 (525): 7DT_5000_fitted\n",
-      "F526 E526 (526): 7DT_5250_fitted\n",
-      "F527 E527 (527): 7DT_5500_fitted\n",
-      "F528 E528 (528): 7DT_5750_fitted\n",
-      "F529 E529 (529): 7DT_6000_fitted\n",
-      "F530 E530 (530): 7DT_6250_fitted\n",
-      "F531 E531 (531): 7DT_6500_fitted\n",
-      "F532 E532 (532): 7DT_6750_fitted\n",
-      "F533 E533 (533): 7DT_7000_fitted\n",
-      "F534 E534 (534): 7DT_7250_fitted\n",
-      "F535 E535 (535): 7DT_7500_fitted\n",
-      "F536 E536 (536): 7DT_7750_fitted\n",
-      "F537 E537 (537): 7DT_8000_fitted\n",
-      "F538 E538 (538): 7DT_8250_fitted\n",
-      "F539 E539 (539): 7DT_8500_fitted\n",
-      "F540 E540 (540): 7DT_8750_fitted\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/data1/hbahk/envs/main/lib/python3.9/site-packages/eazy/photoz.py:1326: RuntimeWarning: invalid value encountered in log10\n",
-      "  self.prior_mag_cat += -2.5*np.log10(np.squeeze(self.fnu[:,ix]))\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Set sys_err = 0.01 (positive=True)\n",
-      "Read PRIOR_FILE:  ../prior_K_TAO.dat\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "192it [00:00, 994.70it/s] \n",
-      "100%|██████████| 192/192 [00:48<00:00,  3.93it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "fit_best: 0.9 s (n_proc=1,  NOBJ=999)\n",
-      "fit_best: 1.0 s (n_proc=1,  NOBJ=999)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2024-10-31 15:19:54,618 :: INFO ::  --- finished 0th batch in 00:00:53\n",
-      "2024-10-31 15:19:54,894 :: INFO :: Finished in 00:00:53\n"
-     ]
-    }
-   ],
-   "source": [
-    "logger.info(\n",
-    "    \">>>> (re)starting COSMOS_7DS_IMS_SPHEREx_deep (Testing PIT/CRPS calculation in oversampled p(z))\"\n",
-    ")\n",
-    "fit_and_save_result_prior(\n",
-    "    params_COSMOS_7DS_IMS_SPHEREx_deep,\n",
-    "    tempfilt_SPHEREx_7DS,\n",
-    "    logger,\n",
-    "    rerun=True,\n",
-    "    run_single_template=True,\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "rerun = True\n",
+    "\n",
     "logger.info(\">>>> (re)starting GAMA_COSMOS_7DS_SPHEREx\")\n",
-    "fit_and_save_result_prior(params_GAMA_COSMOS_7DS_SPHEREx, tempfilt_SPHEREx_7DS, logger)\n",
-    "logger.info(\">>>> (re)starting COSMOS_7DS_IMS_SPHEREx_deep\")\n",
-    "fit_and_save_result_prior(\n",
-    "    params_COSMOS_7DS_IMS_SPHEREx_deep, tempfilt_SPHEREx_7DS, logger\n",
-    ")\n",
+    "fit_and_save_result_prior(params_GAMA_COSMOS_7DS_SPHEREx, tempfilt_SPHEREx_7DS, logger, rerun=rerun)\n",
+    "# logger.info(\">>>> (re)starting COSMOS_7DS_IMS_SPHEREx_deep\")\n",
+    "# fit_and_save_result_prior(\n",
+    "#     params_COSMOS_7DS_IMS_SPHEREx_deep, tempfilt_SPHEREx_7DS, logger, rerun=rerun\n",
+    "# )\n",
     "logger.info(\">>>> (re)starting GAMA_COSMOS_SPHEREx\")\n",
-    "fit_and_save_result_prior(params_GAMA_COSMOS_SPHEREx, tempfilt_SPHEREx, logger)"
+    "fit_and_save_result_prior(params_GAMA_COSMOS_SPHEREx, tempfilt_SPHEREx, logger, rerun=rerun)"
    ]
   },
   {
@@ -1496,17 +1292,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "rerun = True\n",
+    "\n",
     "with open(\"data/tempfilt_7DS.pickle\", \"rb\") as rfile:\n",
     "    tempfilt_7DS = pickle.load(rfile)\n",
     "\n",
     "logger.info(\">>>> (re)starting GAMA_7DS_RIS\")\n",
-    "fit_and_save_result_prior(params_GAMA_7DS_RIS, tempfilt_7DS, logger, n_proc=40)\n",
+    "fit_and_save_result_prior(params_GAMA_7DS_RIS, tempfilt_7DS, logger, n_proc=40, rerun=rerun)\n",
     "\n",
     "logger.info(\">>>> (re)starting GAMA_7DS_IMS\")\n",
-    "fit_and_save_result_prior(params_GAMA_7DS_IMS, tempfilt_7DS, logger, n_proc=40)\n",
+    "fit_and_save_result_prior(params_GAMA_7DS_IMS, tempfilt_7DS, logger, n_proc=40, rerun=rerun)\n",
     "\n",
     "logger.info(\">>>> (re)starting GAMA_7DS_WFS\")\n",
-    "fit_and_save_result_prior(params_GAMA_7DS_WFS, tempfilt_7DS, logger, n_proc=40)"
+    "fit_and_save_result_prior(params_GAMA_7DS_WFS, tempfilt_7DS, logger, n_proc=40, rerun=rerun)"
    ]
   },
   {
@@ -1515,14 +1313,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "rerun = True\n",
+    "\n",
     "logger.info(\">>>> (re)starting COSMOS_7DS_RIS\")\n",
-    "fit_and_save_result_prior(params_COSMOS_7DS_RIS, tempfilt_7DS, logger, n_proc=40)\n",
+    "fit_and_save_result_prior(params_COSMOS_7DS_RIS, tempfilt_7DS, logger, n_proc=40, rerun=rerun)\n",
     "\n",
     "logger.info(\">>>> (re)starting COSMOS_7DS_IMS\")\n",
-    "fit_and_save_result_prior(params_COSMOS_7DS_IMS, tempfilt_7DS, logger, n_proc=40)\n",
+    "fit_and_save_result_prior(params_COSMOS_7DS_IMS, tempfilt_7DS, logger, n_proc=40, rerun=rerun)\n",
     "\n",
     "logger.info(\">>>> (re)starting COSMOS_7DS_WFS\")\n",
-    "fit_and_save_result_prior(params_COSMOS_7DS_WFS, tempfilt_7DS, logger, n_proc=40)"
+    "fit_and_save_result_prior(params_COSMOS_7DS_WFS, tempfilt_7DS, logger, n_proc=40, rerun=rerun)"
    ]
   },
   {
