run with ferr multiple 1.5

--- a/joint_challenge/run.ipynb
+++ b/joint_challenge/run.ipynb
@@ -1124,11 +1124,11 @@
     "\n",
     "logger.info(\">>>> (re)starting GAMA_COSMOS_7DS_SPHEREx\")\n",
     "fit_and_save_result_prior(params_GAMA_COSMOS_7DS_SPHEREx, tempfilt_SPHEREx_7DS, logger, rerun=rerun,\n",
-    "                          translate_file=translate_filename, multiple_fluxerr=1.3)\n",
+    "                          translate_file=translate_filename, multiple_fluxerr=1.5)\n",
     "\n",
     "logger.info(\">>>> (re)starting GAMA_COSMOS_SPHEREx\")\n",
     "fit_and_save_result_prior(params_GAMA_COSMOS_SPHEREx, tempfilt_SPHEREx, logger, rerun=rerun,\n",
-    "                          translate_file=translate_filename, multiple_fluxerr=1.3)"
+    "                          translate_file=translate_filename, multiple_fluxerr=1.5)"
    ]
   },
   {
@@ -1310,7 +1310,7 @@
     "logger.info(\">>>> (re)starting COSMOS_7DS_IMS_SPHEREx_deep\")\n",
     "fit_and_save_result_prior(\n",
     "    params_COSMOS_7DS_IMS_SPHEREx_deep, tempfilt_SPHEREx_7DS, logger, rerun=rerun,\n",
-    "    translate_file=translate_filename, multiple_fluxerr=1.\n",
+    "    translate_file=translate_filename, multiple_fluxerr=1.5\n",
     ")"
    ]
   },
@@ -1633,17 +1633,17 @@
     "with open(\"data/tempfilt_7DS.pickle\", \"rb\") as rfile:\n",
     "    tempfilt_7DS = pickle.load(rfile)\n",
     "\n",
-    "# logger.info(\">>>> (re)starting GAMA_7DS_RIS\")\n",
-    "# fit_and_save_result_prior(params_GAMA_7DS_RIS, tempfilt_7DS, logger, n_proc=40, rerun=rerun,\n",
-    "#                           translate_file=translate_filename, multiple_fluxerr=1.3)\n",
+    "logger.info(\">>>> (re)starting GAMA_7DS_RIS\")\n",
+    "fit_and_save_result_prior(params_GAMA_7DS_RIS, tempfilt_7DS, logger, n_proc=40, rerun=rerun,\n",
+    "                          translate_file=translate_filename, multiple_fluxerr=1.5)\n",
     "\n",
     "logger.info(\">>>> (re)starting GAMA_7DS_IMS\")\n",
     "fit_and_save_result_prior(params_GAMA_7DS_IMS, tempfilt_7DS, logger, n_proc=40, rerun=rerun,\n",
-    "                          translate_file=translate_filename, multiple_fluxerr=2.0)\n",
+    "                          translate_file=translate_filename, multiple_fluxerr=1.5)\n",
     "\n",
-    "# logger.info(\">>>> (re)starting GAMA_7DS_WFS\")\n",
-    "# fit_and_save_result_prior(params_GAMA_7DS_WFS, tempfilt_7DS, logger, n_proc=40, rerun=rerun,\n",
-    "#                           translate_file=translate_filename, multiple_fluxerr=1.3)"
+    "logger.info(\">>>> (re)starting GAMA_7DS_WFS\")\n",
+    "fit_and_save_result_prior(params_GAMA_7DS_WFS, tempfilt_7DS, logger, n_proc=40, rerun=rerun,\n",
+    "                          translate_file=translate_filename, multiple_fluxerr=1.5)"
    ]
   },
   {
@@ -1656,15 +1656,15 @@
     "\n",
     "logger.info(\">>>> (re)starting COSMOS_7DS_RIS\")\n",
     "fit_and_save_result_prior(params_COSMOS_7DS_RIS, tempfilt_7DS, logger, n_proc=40, rerun=rerun,\n",
-    "                          translate_file=translate_filename, multiple_fluxerr=1.3)\n",
+    "                          translate_file=translate_filename, multiple_fluxerr=1.5)\n",
     "\n",
     "logger.info(\">>>> (re)starting COSMOS_7DS_IMS\")\n",
     "fit_and_save_result_prior(params_COSMOS_7DS_IMS, tempfilt_7DS, logger, n_proc=40, rerun=rerun,\n",
-    "                          translate_file=translate_filename, multiple_fluxerr=1.3)\n",
+    "                          translate_file=translate_filename, multiple_fluxerr=1.5)\n",
     "\n",
     "logger.info(\">>>> (re)starting COSMOS_7DS_WFS\")\n",
     "fit_and_save_result_prior(params_COSMOS_7DS_WFS, tempfilt_7DS, logger, n_proc=40, rerun=rerun,\n",
-    "                          translate_file=translate_filename, multiple_fluxerr=1.3)"
+    "                          translate_file=translate_filename, multiple_fluxerr=1.5)"
    ]
   }
  ],
